# simple_compiler

./: CMakeLists.txt
grammar/: simple_language.ebnf
src/: cfg.cpp  cfg.hpp  compile_unit.cpp  compile_unit.hpp  file_utils.cpp  file_utils.hpp  lexer.cpp  lexer.hpp  logger.hpp  main.cpp  tokens.hpp
